Pham Jin up code

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">DuLich_VanQuy</string>
-    
+    <string name="facebook_app_id">456503322104710</string>
 </resources>
